# python_scrapy

EX-12/: pyproject.toml
EX-12/test_spyder/test_spyder/spiders/: authors.json  authors.py
